[gd_scene load_steps=15 format=3 uid="uid://daawhgpmnce28"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_ksto6"]
[ext_resource type="Texture2D" uid="uid://chwhbuoh4ia33" path="res://images/icon.svg" id="2_ag7sa"]
[ext_resource type="PackedScene" uid="uid://cvu02dgni5apl" path="res://prefabs/player.tscn" id="3_rxy33"]
[ext_resource type="PackedScene" uid="uid://dn4ta5j1coqj7" path="res://prefabs/lever.tscn" id="4_a778n"]
[ext_resource type="Texture2D" uid="uid://c0lvvlaom4gq" path="res://images/Sprite-0008.png" id="4_rd8d4"]
[ext_resource type="PackedScene" uid="uid://ehe2rsrrwcxd" path="res://prefabs/final_door.tscn" id="5_ck1rp"]
[ext_resource type="PackedScene" uid="uid://olpdqacc5np2" path="res://prefabs/gate.tscn" id="5_cp7ys"]
[ext_resource type="PackedScene" uid="uid://bpspdhp4ksw40" path="res://prefabs/oxgyen_timer.tscn" id="7_7e6fu"]
[ext_resource type="PackedScene" uid="uid://b8t05c2uxmj0j" path="res://prefabs/coin.tscn" id="8_xvi1m"]
[ext_resource type="PackedScene" uid="uid://psung4ycl0xj" path="res://prefabs/treasure_chest.tscn" id="9_qr0ue"]
[ext_resource type="Texture2D" uid="uid://cutkg5e486dgi" path="res://images/rock1.png" id="11_55aun"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ek4h"]
texture = ExtResource("4_rd8d4")
texture_region_size = Vector2i(120, 120)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v5g5n"]
texture = ExtResource("2_ag7sa")
texture_region_size = Vector2i(120, 120)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60, -60, 60, -60, 60, 60, -60, 60)

[sub_resource type="TileSet" id="TileSet_aoxrx"]
tile_size = Vector2i(120, 120)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_4ek4h")
sources/1 = SubResource("TileSetAtlasSource_v5g5n")

[node name="level_1" type="Node2D"]
script = ExtResource("1_ksto6")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_aoxrx")
format = 2

[node name="player" parent="." instance=ExtResource("3_rxy33")]
position = Vector2(226, 231)

[node name="screen-camera" type="Camera2D" parent="player"]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 2050
limit_bottom = 1525

[node name="final-door" parent="." instance=ExtResource("5_ck1rp")]
position = Vector2(1441, 35)

[node name="gate" parent="." instance=ExtResource("5_cp7ys")]
position = Vector2(1443, 543)

[node name="lever" parent="." instance=ExtResource("4_a778n")]
position = Vector2(460, 626)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="oxgyen_timer" parent="CanvasLayer" instance=ExtResource("7_7e6fu")]

[node name="treasure_chest" parent="." instance=ExtResource("9_qr0ue")]
position = Vector2(820, 1158)

[node name="treasure_chest2" parent="." instance=ExtResource("9_qr0ue")]
position = Vector2(1710, 181)
rotation = 3.14159
scale = Vector2(1.08, -1)

[node name="coin" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(701, 219)

[node name="coin2" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(708, 592)

[node name="coin3" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(709, 855)

[node name="coin4" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(416, 1130)

[node name="coin5" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(177, 959)

[node name="coin6" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(318, 617)

[node name="coin7" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(1495, 1147)

[node name="coin8" parent="." instance=ExtResource("8_xvi1m")]
position = Vector2(1483, 416)

[node name="Rock2" type="Sprite2D" parent="."]
position = Vector2(1172, 631)
rotation = -0.0107364
scale = Vector2(2.64061, 2.43361)
skew = -0.000913262
texture = ExtResource("11_55aun")

[node name="Rock1" type="Sprite2D" parent="."]
position = Vector2(786, 130)
scale = Vector2(1.625, 1.56)
texture = ExtResource("11_55aun")

[connection signal="body_entered" from="lever" to="gate" method="_on_lever_body_entered"]
[connection signal="treasure_chest_opened" from="treasure_chest" to="." method="_on_treasure_chest_treasure_chest_opened"]
[connection signal="treasure_chest_opened" from="treasure_chest2" to="." method="_on_treasure_chest_2_treasure_chest_opened"]
[connection signal="coin_picked_up" from="coin" to="." method="_on_coin_coin_picked_up"]
[connection signal="coin_picked_up" from="coin2" to="." method="_on_coin_2_coin_picked_up"]
[connection signal="coin_picked_up" from="coin3" to="." method="_on_coin_3_coin_picked_up"]
[connection signal="coin_picked_up" from="coin4" to="." method="_on_coin_4_coin_picked_up"]
[connection signal="coin_picked_up" from="coin5" to="." method="_on_coin_5_coin_picked_up"]
[connection signal="coin_picked_up" from="coin6" to="." method="_on_coin_6_coin_picked_up"]
[connection signal="coin_picked_up" from="coin7" to="." method="_on_coin_7_coin_picked_up"]
[connection signal="coin_picked_up" from="coin8" to="." method="_on_coin_8_coin_picked_up"]
